[build-system]
requires = ["setuptools", "wheel", "cython", "pkgconfig", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
build-frontend = "build"
build = "cp3*"
skip = ["*-win32", "*-manylinux_i686", "*-musllinux_*"]
archs = ["auto64"]
test-requires = ['.[test] pytest']
test-command = ['pytest --pyargs rocksdb']

manylinux-x86_64-image = "manylinux2014"

[tool.cibuildwheel.macos]

[tool.cibuildwheel.linux]
# Avoid re-building the C library in every iteration by testing for the build directory.
before-build = "yum install -y bzip2-devel lz4-devel snappy-devel zlib-devel python3-Cython && (    test -d ${{ env.LIBROCKSDB_PATH }} || (    git clone https://github.com/facebook/rocksdb --depth 1 --branch ${{ matrix.rocksdb_ver }} ${{ env.LIBROCKSDB_PATH }} &&  cd ${{ env.LIBROCKSDB_PATH }} &&  CXXFLAGS='-flto -Os -s' PORTABLE=1 make shared_lib -j 4  )) && pushd ${{ env.LIBROCKSDB_PATH }} && make install-shared &&  ldconfig && popd"

[tool.cibuildwheel.windows]
before-build = "pip install delvewheel"

[tool.cibuildwheel.windows.environment]
VCPKG_ROCKSDB_INCLUDE_PATH= "C:\\vcpkg\\installed\\x64-windows\\include\\"
VCPKG_ROCKSDB_LIB_PATH= "C:\\vcpkg\\installed\\x64-windows\\lib\\"
vcpkgVersion= "2020.06.15"
vcpkgInstallParamPath= '$(Build.SourcesDirectory)\\.azure-pipelines\\vcpkg'
vcpkgBinariesPath= 'C:\\Users\\VssAdministrator\\AppData\\Local\\vcpkg\\archives'
"vcpkg.arch"= 'x64'
