[metadata]
name = rocksdb
version = 0.8.0rc3
description = Python bindings for RocksDB
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Martina Ferrari
author_email = tina@tina.pm
url = https://github.com/NightTsarina/python-rocksdb
project_urls =
    Bug Reports = https://github.com/NightTsarina/python-rocksdb/issues
    Repository = https://github.com/NightTsarina/python-rocksdb
license = BSD 3-Clause License
license_file = LICENSE
keywords = rocksdb bindings
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Database

[options]
packages = find:
package_dir =
    rocksdb = rocksdb
include_package_data = True
zip_safe = False
install_requires =
    setuptools >= 25
test_require =
    pytest

[options.packages.find]
where = .

[options.extras_require]
doc =
    sphinx
    sphinx_rtd_theme
test =
    pytest

[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_sphinx]
upload-dir = docs/_build/html
