[metadata]
name = rocksdb
description = Python bindings for RocksDB, primarily for use with Faust
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/faust-streaming/python-rocksdb
project_urls =
    Bug Reports = https://github.com/faust-streaming/python-rocksdb/issues
    Repository = https://github.com/faust-streaming/python-rocksdb
license = BSD 3-Clause License
license_file = LICENSE
keywords = rocksdb bindings



[options]
packages = find:
package_dir =
    rocksdb = rocksdb
include_package_data = True
zip_safe = False
install_requires =
    setuptools >= 25
test_require =
    pytest

[options.packages.find]
where = .

[options.extras_require]
doc =
    sphinx
    sphinx_rtd_theme
test =
    pytest

[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_sphinx]
upload-dir = docs/_build/html
